RESOLVED FIXED45182
REGRESSION (r57215): Decomposed diacritics render incorrectly when preceded by stacked diacritics
https://bugs.webkit.org/show_bug.cgi?id=45182
Summary REGRESSION (r57215): Decomposed diacritics render incorrectly when preceded b...
mitz
Reported 2010-09-03 10:33:59 PDT
Decomposed diacritics render incorrectly when preceded by stacked diacritics
Attachments
Patch (4.18 KB, patch)
2010-09-03 10:47 PDT, mitz
andersca: review+
mitz
Comment 1 2010-09-03 10:35:50 PDT
mitz
Comment 2 2010-09-03 10:40:55 PDT
Patch forthcoming.
mitz
Comment 3 2010-09-03 10:47:28 PDT
mitz
Comment 4 2010-09-03 10:57:08 PDT
WebKit Review Bot
Comment 5 2010-09-03 11:25:53 PDT
http://trac.webkit.org/changeset/66740 might have broken Qt Linux Release
mitz
Comment 6 2010-09-03 12:35:37 PDT
(In reply to comment #5) > http://trac.webkit.org/changeset/66740 might have broken Qt Linux Release Bug 45193.
Note You need to log in before you can comment on or make changes to this bug.