2010-09-03  Dan Bernstein  <mitz@apple.com>

Reviewed by Anders Carlsson.

        <rdar://problem/8392655> REGRESSION (r57215): Decomposed diacritics render incorrectly when preceded by stacked diacritics
        https://bugs.webkit.org/show_bug.cgi?id=45182

        Test: fast/text/decomposed-after-stacked-diacritics.html

        * platform/graphics/Font.cpp:
        (WebCore::Font::codePath): Do not bail out if the run contains stacked diacritics, since
        it may also contain characters that require the complex text code path.
2010-09-03  Dan Bernstein  <mitz@apple.com>

        Reviewed by Anders Carlsson.

        <rdar://problem/8392655> REGRESSION (r57215): Decomposed diacritics render incorrectly when preceded by stacked diacritics
        https://bugs.webkit.org/show_bug.cgi?id=45182

        * fast/text/decomposed-after-stacked-diacritics-expected.txt: Added.
        * fast/text/decomposed-after-stacked-diacritics.html: Added.


Canonical link: https://commits.webkit.org/57499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66740 268f45cc-cd09-0410-ab3c-d52691b4dbfc