WebCore/platform/graphics/Font.cpp
@@ -277,6 +277,8 @@ Font::CodePath Font::codePath(const TextRun& run) const
         return Complex;
 #endif
 
+    CodePath result = Simple;
+
     // Start from 0 since drawing and highlighting also measure the characters before run->from
     for (int i = 0; i < run.length(); i++) {
         const UChar c = run[i];
@@ -312,8 +314,10 @@ Font::CodePath Font::codePath(const TextRun& run) const
 
         if (c < 0x1E00) // U+1E00 through U+2000 characters with diacritics and stacked diacritics
             continue;
-        if (c <= 0x2000)
-            return SimpleWithGlyphOverflow;
+        if (c <= 0x2000) {
+            result = SimpleWithGlyphOverflow;
+            continue;
+        }
 
         if (c < 0x20D0) // U+20D0 through U+20FF Combining marks for symbols
             continue;
@@ -329,7 +333,7 @@ Font::CodePath Font::codePath(const TextRun& run) const
     if (typesettingFeatures())
         return Complex;
 
-    return Simple;
+    return result;
 }
 
 }
